tutordir = \
	$(datadir)/genius/tutors/
tutor_DATA = \
	cantor.gel \
	dalemb-pulse.gel \
	eulers-method-exp-run.gel \
	eulers-method-graphs-exp.gel \
	laplace-fdm.gel \
	linapprox.gel \
	lorenz.gel \
	newton-calc-sqrt2.gel \
	newton-sqrt2.gel \
	shocks.gel \
	sierpinski.gel \
	standing-waves.gel \
	strange-attractor.gel \
	taylor-exp.gel \
	taylor-sin.gel

EXTRA_DIST = \
	$(tutor_DATA)
